0.6.0 (currently working on)
- [#1774] Updated Russion translation, thanks to Irina Kuznecova
- [#1770] Updated Italian translation, thanks to Mauro Lorenzutti
- [#1769] Updated French translation, thanks to Francois Suter
- [#1768] Updated Danish translation, thanks to Lars Dyhr
- [#1767] Fix: Catchable fatal error without events in list view
- [#1737] Fix: In mod2, topics and dates have the "single event" icon
- [#1443] Fix: omitDateIfSameAsPrevious does not work
- [#1739] Fix: template.php imported twice
- [#536] Change: Use the speakerbag for iterating over speakers
- [#537] Change: Use the organizerbag for iterating over organizers
- [#1569] Feature: Link the categories in the list view to the list view page, filtered by the category
- [#1406] Feature: Add a switch to always sort the list view by category
- [#1616] Change: Add a conflict with DBAL and mention this in the manual
- [#1407] Feature: Allow filtering the list view by categories
- [#1581] Feature: Allow to set time-frames for seminar bag builders
- [#1730] Change: Make the teaser field an RTE field
- [#1662] Change: Test the bag builder with an empty string for the source pages (with 0 and > 0 for recursion)
- [#1626] Fix: MySQL error in countdown view
- [#1656] Fix: Label "language" is not removed from single view if no language is defined
- [#1666] Fix: CSV export of events is broken
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2
- [#1627] Feature: Use the file with common constants from oelib
- [#1094] Change: Add a function "setSubpart" and remove the direct accesses to $this->templateCache
- [#1467] Feature: Allow setting categories in the FE editing, patch by John Boyd-Rainey
- [#1598] Feature: The pi1 search should also search in the category names, patch by John Boyd-Rainey
- [#1655] Fix: Wrong <dl> in HTML output
- [#1663] Change: Removed suggestion for newloginbox
- [#1104] Change: Use type hinting for function parameters